<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

<!-- zuvor bitte jeweils install vom Projekt MathService aufrufen!! -->

	<groupId>jj</groupId>
	<artifactId>MathServiceAppl</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>MathServiceAppl</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>9</source>
					<target>9</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<!-- not necessary... -->
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>jj.mathService</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jj</groupId>
				<artifactId>MathService</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>